--- a/dio-spiderman-main/index.html
+++ b/dio-spiderman-main/index.html
@@ -16,7 +16,7 @@
     <ul>
 
 
-      <li class="spider-menu_item">''
+      <li class="spider-menu_item">
         <a href="/">Pagina Inicial</a>
       </li>
 
